--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   
   <meta charset="utf-8">
   <meta name="description"
-        content="ADAMSim: PyBullet-Based Simulation Environment for Research on Domestic Mobile Manipulator Robots">
+        content="Task Generalization with Pathwise Conditioning of Gaussian Process for Learning from Demonstration">
   <meta name="keywords" content="LearningfromDemonstration, Manipulation, Robot">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ADAMSim: PyBullet-Based Simulation Environment for Research on Domestic Mobile Manipulator Robots</title>
+  <title>Task Generalization with Pathwise Conditioning of Gaussian Process for Learning from Demonstration</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
