--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             More Research
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="https://github.com/AdrianPrados/Robotic-Rearrangement-of-Everyday-Objects" target="_blank">
-              Everyday Objects Rearrangement in a Human-Like Manner via Robotic Imagination and Learning from Demonstration
+            <a class="navbar-item" href="" target="_blank">
+              Future examples will be added
             </a>
-            <a class="navbar-item" href="https://github.com/AdrianPrados/Learning-and-generalization-of-task-parameterized-skills-through-few-human-demonstrations" target="_blank">
-              Learning and generalization of task-parameterized skills through few human demonstrations
+            <a class="navbar-item" href="" target="_blank">
+              Future examples will be added
             </a>
           </div>
         </div>
@@ -79,8 +79,8 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <img src="static/images/LogoJornada.png" alt="JornadasAutomatica2025" style="width: 200px;;height:auto;">
-          <h1 class="title is-1 publication-title">ADAMSim: PyBullet-Based Simulation Environment for Research on Domestic Mobile Manipulator Robots</h1>
+          <img src="static/images/ICRALogo.png" alt="ICRA2026" style="width: 200px;;height:auto;">
+          <h1 class="title is-1 publication-title">Task Generalization with Pathwise Conditioning of Gaussian Process for Learning from Demonstration</h1>
           <div class="is-size-5 publication-authors">
 
             <span class="author-block">
