--- a/index.html
+++ b/index.html
@@ -79,28 +79,24 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <img src="static/images/ICRALogo.png" alt="ICRA2026" style="width: 200px;;height:auto;">
+          <img src="static/images/ICRALogo.png" alt="ICRA2026" style="width: 500px;;height:auto;">
           <h1 class="title is-1 publication-title">Task Generalization with Pathwise Conditioning of Gaussian Process for Learning from Demonstration</h1>
           <div class="is-size-5 publication-authors">
 
             <span class="author-block">
-              <a href="https://github.com/AdrianPrados" target="_blank"> Adrian Prados,</a>
+              <a href="" target="_blank"> First Author,</a>
             </span>
 
             <span class="author-block">
-              <a href="https://github.com/gonecho" target="_blank"> Gonzalo Espinoza,</a>
+              <a href="" target="_blank"> Second Author,</a>
             </span>
 
             <span class="author-block">
-              <a href="https://github.com/albmendez" target="_blank"> Alberto Mendez,</a>
+              <a href="" target="_blank"> Third Author,</a>
             </span>
 
             <span class="author-block">
-              <a href="https://github.com/almorav" target="_blank"> Alicia Mora,</a>
-            </span>
-
-            <span class="author-block">
-              <a href="https://scholar.google.es/citations?user=zVLybhsAAAAJ&hl=es" target="_blank"> Ramon Barber</a>
+              <a href="" target="_blank"> Fourth Author,</a>
             </span>
 
             <!--span class="author-block">
@@ -109,7 +105,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <a class="author-block" href="https://mobile-robots-group-uc3m.github.io/MobileRobotsDocumentation/" target="_blank">Mobile Robots Group, RoboticsLab, University Carlos III</a>
+            <a class="author-block" href="" target="_blank">Research Group for all of the publication-authors</a>
           </div>
 
           <!--div class="is-size-5 publication-authors">
@@ -151,7 +147,7 @@
 
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/Mobile-Robots-Group-UC3M/AdamSim"
+                <a href=""
                    class="external-link button is-normal is-rounded is-dark" target="_blank">
                   <span class="icon">
                       <i class="fab fa-github"></i>
