--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            This paper introduces ADAMSim, a PyBullet-based simulation environment tailored for Ambidextrous Domestic Autonomous Manipulator (ADAM), 
-            developed to support research in navigation, manipulation, and learning for domestic robotics. The simulator accurately replicates the 
-            structure and behavior of the physical robot, enabling robust sim-to-real and real-to-sim algorithm transfer. ADAMSim follows a modular design, 
-            including navigation, arm and hand kinematics, perception, and ROS communication. This architecture allows synchronized operation between the 
-            real robot and its digital twin. Several example applications were developed, ranging from vision and grasping tasks to navigation and teleoperation, 
-            including experiments running both simulated and real robots simultaneously. Its open-source and flexible design makes ADAMSim a powerful tool for 
-            safe and reproducible algorithm development and experimentation in household robotics. The platform is also intended to support future research in 
-            indoor mapping, advanced manipulation learning, and educational projects, serving as a test bed.
+            To effectively operate in human-centered environments, robots must possess the capability to rapidly adapt to novel and changing situations. 
+            Techniques such as Learning from Demonstration enable fast learning without the need for explicit coding, however, in certain cases they 
+            exhibit limitations in generalizing beyond the set of demonstrations, which constrains their ability to rapidly adapt to unforeseen scenarios. 
+            In this work, we present a movement primitive learning algorithm based on Gaussian Processes, combined with a zero-shot adaptation to new 
+            via-points without requiring retraining, through Pathwise Conditioning. The algorithm not only learns the movement policy but is also capable 
+            of adapting it rapidly while preserving prior knowledge. The method has been evaluated through comparisons against other state-of-the-art 
+            approaches, experiments in simulated environments, as well as on a real robotic platform, generating new solutions for learned tasks by 
+            modifying via-points in both position and orientation.
           </p>
         </div>
       </div>
     </div>
-    <div class="column">
+    <!--<div class="column">
       <img src="./static/images/RealSim.png">
       <p class="subtitle has-text-centered">
         (a) Learning a manipulation task from demonstrations using a real-sim-real pipeline, 
@@ -216,7 +216,7 @@
       </p>
     </div>
   </div>
-  </div>
+  </div>-->
 </section>
 
 
