Simulation and Exps

--- a/index.html
+++ b/index.html
@@ -267,12 +267,12 @@
 
 
 
-<!-- ADAMSim Modules -->
+<!-- methdo description -->
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column">
-        <h2 class="title is-3">ADAMSim Modules</h2>
+        <h2 class="title is-3">Method Description</h2>
         <div class="content has-text-justified">
           <p>
             <strong>ADAMSim</strong> is structured in a modular fashion, allowing flexibility, scalability, and ease of integration with both simulated and real robotic systems. The core modules are:
@@ -447,23 +447,17 @@
 </section-->
 
 
-<!-- Examples with ADAM. -->
+<!-- Experiments -->
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column">
-        <h2 class="title is-3">ADAMSim Examples</h2>
+        <h2 class="title is-3">Simulation and Experiments</h2>
         <div class="content has-text-justified">
           <p>
-            To evaluate the efficiency of the simulator, several examples have been carried out both in simulation and by connecting 
-            the simulation with the real robot. These examples demonstrate the modularity of ADAMSim for fast, efficient, and simple 
-            algorithm development, as well as for debugging without needing access to the robot in the real environment. The examples 
-            include various use cases where tasks are executed entirely in simulation, showcasing how the ADAM robot can be directly used 
-            in the PyBullet-based simulated environment. Additionally, two use cases have been added to highlight the ROS bridge between the 
-            simulated model and the real robot. In these cases, one test involves object manipulation, where a custom Learning from Demonstration 
-            algorithm is used to generate solutions for simultaneously manipulating two objects. The second test shows how the robot is capable of 
-            navigating autonomously in the simulated environment and, through the communication bridge, replicates the same motion in the real robot.
-
+            To evaluate the efficiency of our method, we conducted both quantitative and qualitative experiments. Tests were conducted against several 
+            state-of-the-art methods to evaluate its performance. In addition, we carried out different efficiency evaluations in real tasks using a 
+            IIWA robotic arm and a mobile bimanipulator robot, both in simulation through PyBullet and in a real-world environment.
           </p>
         </div>
       </div>
