--- a/index.html
+++ b/index.html
@@ -446,6 +446,32 @@
   </div>
 </section-->
 
+<!-- methdo description -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column">
+        <h2 class="title is-3">Comparison against other LfD methods</h2>
+        <div class="content has-text-justified">
+          <p>
+            <strong>ADAMSim</strong> is structured in a modular fashion, allowing flexibility, scalability, and ease of integration with both simulated and real robotic systems. The core modules are:
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container is-max-desktop">
+      <div class="hero body">
+        <img src="./static/images/ExpComparison1.jpg" alt="Comaprison methods Lfd 1">
+        <p class="subtitle has-text-centered">
+          Diagram of the connections between the real model and the simulator through the created ROS bridge.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 
 <!-- Experiments -->
 <section class="section">
