--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
         <h2 class="title is-3">Comparison against other LfD methods</h2>
         <div class="content has-text-justified">
           <p>
-            <strong>ADAMSim</strong> is structured in a modular fashion, allowing flexibility, scalability, and ease of integration with both simulated and real robotic systems. The core modules are:
+            <strong>Case 4: Far initial and final restrictions: </strong> in this scenario, the goal and the initial U-Shape geometric descriptors are shifted to a further position with a rotation
           </p>
         </div>
       </div>
