--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           Solutions of movement primitive learning via GPs in 2D (a) and 3D (b) environments with 3 via-points. To the right of each solution, 
           the GP decomposition for each dimension is shown, where the shaded area represents the covariance. At the learned initial via-points, 
           the passage is 100% certain (no shaded area is present), indicating that there is no uncertainty at the via-points, ensuring that the generated 
-          solution passes through these points.
+          solution passes through these points.<br>
         </p>
       </div>
     </div>
@@ -344,7 +344,7 @@
             new information without retraining, combining it with prior knowledge to adapt the final solution to the new constraints.Our algorithm efficiently 
             handles multidimensional tasks, including position and orientation, allowing trajectories to adapt in real time to new constraints. This makes 
             Pathwise Conditioning ideal for interactive or zero-shot adjustments of movement primitives, even when the new via-points lie outside the original 
-            demonstration distribution.
+            demonstration distribution.<br>
             
           </p>
         </div>
