--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 </section-->
 
 <!-- methdo description -->
-<section class="section">
+<!--section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column">
@@ -474,8 +474,119 @@
       </div>
     </div>
   </div>
-</section>
+</section-->
 
+
+<!-- Comparison methods LfD -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column">
+        <h2 class="title is-3">Comparison against other LfD methods</h2>
+        <div class="content has-text-justified">
+          <p>
+            To evaluate the efficiency of our method, we conducted a comparison against four different task generalization algorithms for both position 
+            and orientation, based on task parameters: TP-GPR, TP-GMM, TP-ProMP, and Synthetic-TP-GMM. The experiments rely on a single demonstration with 
+            constraints only at the endpoints. Both endpoints (blue U-Shape polygons) are modified in position and orientation to illustrate different 
+            configurations of the solutions produced by each method. Several experiments were performed using a single demonstration while altering the 
+            endpoint constraints. The tests are categorized as <em>final restriction near</em>, <em>final restriction far</em>, <em>both restrictions near</em> 
+            and <em>restrictions far</em>, with orientation modified in all cases.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Experiment 1-->
+    <div class="columns is-centered has-text-centered">
+      <div class="column">
+        <div class="content has-text-justified">
+          <p>
+            <strong>Experiment 1: Final restriction near:</strong> In this scenario, the goal U-Shape geometric descriptor is shifted to a nearby 
+            position with a rotation, while the initial descriptor remains unchanged.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container is-max-desktop">
+      <div class="hero body">
+        <img src="./static/images/ExpComparison1.jpg" alt="GPs solutions">
+        <p class="subtitle has-text-centered">
+          The compared methods do not satisfy the constraints when given a single demonstration or need synthetic data to achieve good solutions. 
+          Our method can generalize to the constraints imposed by the geometric descriptors at both endpoints in position and orientation.
+        </p>
+      </div>
+    </div>
+    <hr class="my-3">
+
+    <!-- Experiment 2-->
+    <div class="columns is-centered has-text-centered">
+      <div class="column">
+        <div class="content has-text-justified">
+          <p>
+            <strong>Experiment 2: Final restriction far:</strong> In this scenario, the goal U-Shape geometric descriptor is shifted to a further 
+            position with a rotation, while the initial descriptor remains unchanged.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container is-max-desktop">
+      <div class="hero body">
+        <img src="./static/images/ExpComparison1.jpg" alt="GPs solutions">
+        <p class="subtitle has-text-centered">
+          The compared methods do not satisfy the constraints when given a single demonstration or need synthetic data to achieve good solutions. 
+          Our method can generalize to the constraints imposed by the geometric descriptors at both endpoints in position and orientation.
+        </p>
+      </div>
+    </div>
+    <hr class="my-3">
+
+    <!-- Experiment 3-->
+    <div class="columns is-centered has-text-centered">
+      <div class="column">
+        <div class="content has-text-justified">
+          <p>
+            <strong>Experiment 3: Both restrictions near:</strong> In this scenario, the goal and the initial U-Shape geometric descriptors are 
+            shifted to a new near position with a rotation
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container is-max-desktop">
+      <div class="hero body">
+        <img src="./static/images/ExpComparison1.jpg" alt="GPs solutions">
+        <p class="subtitle has-text-centered">
+          The compared methods do not satisfy the constraints when given a single demonstration or need synthetic data to achieve good solutions. 
+          Our method can generalize to the constraints imposed by the geometric descriptors at both endpoints in position and orientation.
+        </p>
+      </div>
+    </div>
+    <hr class="my-3">
+
+    <!-- Experiment 4-->
+    <div class="columns is-centered has-text-centered">
+      <div class="column">
+        <div class="content has-text-justified">
+          <p>
+            <strong>Experiment 4: Far initial and final restrictions:</strong> In this scenario, the goal and the initial U-Shape geometric descriptors are 
+            shifted to a further position with a rotation
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container is-max-desktop">
+      <div class="hero body">
+        <img src="./static/images/ExpComparison1.jpg" alt="GPs solutions">
+        <p class="subtitle has-text-centered">
+          The compared methods do not satisfy the constraints when given a single demonstration or need synthetic data to achieve good solutions. 
+          Our method can generalize to the constraints imposed by the geometric descriptors at both endpoints in position and orientation.
+        </p>
+      </div>
+    </div>
+    <hr class="my-3">
+
+    <!-- More models can be added here -->
+  </div>
+</section>
 
 
 
