--- a/index.html
+++ b/index.html
@@ -511,8 +511,6 @@
       <div class="hero body">
         <img src="./static/images/ExpComparison1.jpg" alt="GPs solutions">
         <p class="subtitle has-text-centered">
-          The compared methods do not satisfy the constraints when given a single demonstration or need synthetic data to achieve good solutions. 
-          Our method can generalize to the constraints imposed by the geometric descriptors at both endpoints in position and orientation.
         </p>
       </div>
     </div>
@@ -533,8 +531,6 @@
       <div class="hero body">
         <img src="./static/images/ExpComparison2.jpg" alt="GPs solutions">
         <p class="subtitle has-text-centered">
-          The compared methods do not satisfy the constraints when given a single demonstration or need synthetic data to achieve good solutions. 
-          Our method can generalize to the constraints imposed by the geometric descriptors at both endpoints in position and orientation.
         </p>
       </div>
     </div>
@@ -555,8 +551,6 @@
       <div class="hero body">
         <img src="./static/images/ExpComparison3.jpg" alt="GPs solutions">
         <p class="subtitle has-text-centered">
-          The compared methods do not satisfy the constraints when given a single demonstration or need synthetic data to achieve good solutions. 
-          Our method can generalize to the constraints imposed by the geometric descriptors at both endpoints in position and orientation.
         </p>
       </div>
     </div>
@@ -577,12 +571,53 @@
       <div class="hero body">
         <img src="./static/images/ExpComparison4.jpg" alt="GPs solutions">
         <p class="subtitle has-text-centered">
-          The compared methods do not satisfy the constraints when given a single demonstration or need synthetic data to achieve good solutions. 
-          Our method can generalize to the constraints imposed by the geometric descriptors at both endpoints in position and orientation.
         </p>
       </div>
     </div>
     <hr class="my-3">
+
+    <!-- Carrusel con Bulma -->
+  <div class="container is-max-desktop">
+    <div class="carousel carousel-animated carousel-animate-slide" data-autoplay="true">
+      <div class="carousel-container">
+        <div class="carousel-item has-background is-active">
+          <img class="is-background" src="./static/images/ExpComparison1.jpg" alt="Imagen 1">
+        </div>
+        <div class="carousel-item has-background">
+          <img class="is-background" src="./static/images/ExpComparison2.jpg" alt="Imagen 2">
+        </div>
+        <div class="carousel-item has-background">
+          <img class="is-background" src="./static/images/ExpComparison3.jpg" alt="Imagen 3">
+        </div>
+        <div class="carousel-item has-background">
+          <img class="is-background" src="./static/images/ExpComparison4.jpg" alt="Imagen 4">
+        </div>
+      </div>
+      <!-- Flechas -->
+      <div class="carousel-navigation is-centered">
+        <div class="carousel-nav-left">
+          <i class="fa fa-chevron-left" aria-hidden="true"></i>
+        </div>
+        <div class="carousel-nav-right">
+          <i class="fa fa-chevron-right" aria-hidden="true"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Script Bulma Carousel -->
+  <script src="./bulma-carousel.js"></script>
+  <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    bulmaCarousel.attach('.carousel', {
+      slidesToScroll: 1,
+      slidesToShow: 1,
+      autoplay: true,     // pasa automáticamente
+      pauseOnHover: true, // se pausa al pasar el ratón
+      infinite: true
+    });
+  });
+  </script>
 
     <!-- More models can be added here -->
   </div>
