--- a/index.html
+++ b/index.html
@@ -584,14 +584,11 @@
         <div class="carousel-item has-background is-active">
           <img src="./static/images/ExpComparison1.jpg" alt="Imagen 1" />
         </div>
-        <div class="carousel-item has-background">
+      </div>
+      <div class="carousel-container">
+        <!-- Cada imagen es un item separado -->
+        <div class="carousel-item has-background is-active">
           <img src="./static/images/ExpComparison2.jpg" alt="Imagen 2" />
-        </div>
-        <div class="carousel-item has-background">
-          <img src="./static/images/ExpComparison3.jpg" alt="Imagen 3" />
-        </div>
-        <div class="carousel-item has-background">
-          <img src="./static/images/ExpComparison4.jpg" alt="Imagen 4" />
         </div>
       </div>
 
