--- a/index.html
+++ b/index.html
@@ -584,12 +584,8 @@
         <div class="carousel-item has-background is-active">
           <img src="./static/images/ExpComparison1.jpg" alt="Imagen 1" />
         </div>
-      </div>
-      <div class="carousel-container">
-        <!-- Cada imagen es un item separado -->
-        <div class="carousel-item has-background is-active">
+        <div class="carousel-item has-background">
           <img src="./static/images/ExpComparison2.jpg" alt="Imagen 2" />
-        </div>
       </div>
 
       <!-- Flechas -->
