--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
         </div>
         <div class="carousel-item has-background">
           <img src="./static/images/ExpComparison2.jpg" alt="Imagen 2" />
+        </div>
       </div>
 
       <!-- Flechas -->
