--- a/index.html
+++ b/index.html
@@ -600,10 +600,11 @@
           <div class="carousel-item has-background is-active">
             <img class="is-background" src="./static/images/ExpComparison1.jpg" alt="1">
           </div>
-          <div class="carousel-item has-background">
-            <img class="is-background" src="./static/images/ExpComparison2.jpg" alt="2">
+        </div>
+        <div class="carousel-container">
+          <div class="carousel-item has-background is-active">
+            <img class="is-background" src="./static/images/ExpComparison2.jpg" alt="1">
           </div>
-          <!-- ...más items... -->
         </div>
     
         <div class="carousel-navigation is-centered">
