--- a/index.html
+++ b/index.html
@@ -585,22 +585,22 @@
           <p>
             <strong>Quantitative Comparison Metrics:</strong> The compared methods do not satisfy the constraints when given a single demonstration or need synthetic data to achieve good solutions. 
             Our method can generalize to the constraints imposed by the geometric descriptors at both endpoints in position and orientation. To perform the quantitative comparison, we defined several metrics
-            to evaluate the generalization capability. 
-            <em>Start Cosine Similarity</em> \( \cos(\theta_s) \) allows us to describe the initial direction of the trajectory 
+            to evaluate the generalization capability.
+            <br> 
+            <em>Start Cosine Similarity</em> (cos(θs)) allows us to describe the initial direction of the trajectory 
             and its alignment with the U-Shape descriptor at the entry, through the relation between the starting trajectory vector 
-            \( v_s \) and the entry vector of the U-Shape \( v_o \). 
+            (vs) and the entry vector of the U-Shape (vo). 
             The closer this value is to 1, the more optimal the alignment. 
-          </p>
-          <p>
-            <em>Goal Cosine Similarity</em> \( \cos(\theta_g) \) establishes the same criterion as the Start Cosine Similarity 
-            but for the trajectory’s arrival. For this, we obtain the vector \( v_g \) and compare it with the exit vector of the U-Shape \( v_e \). 
+            <br>
+            <em>Goal Cosine Similarity</em> (cos(θg )) establishes the same criterion as the Start Cosine Similarity 
+            but for the trajectory’s arrival. For this, we obtain the vector (vg) and compare it with the exit vector of the U-Shape (ve). 
             The closer this value is to 1, the more optimal the alignment.
-          </p>
-          <p>
-            Finally, we use <em>Endpoint Distance</em> \( D \), which evaluates whether both the starting and ending points of the trajectory 
+            <br>
+            
+            Finally, we use <em>Endpoint Distance</em> (D), which evaluates whether both the starting and ending points of the trajectory 
             reach the required endpoints without position error. 
-            This metric relies on the positions of the initial and final U-Shapes \( (P_s, P_e) \) and the initial and final trajectory values 
-            \( (\xi_s, \xi_g) \). The smaller this value, the better.  
+            This metric relies on the positions of the initial and final U-Shapes (Ps, Pe) and the initial and final trajectory values 
+            (ξs, ξg ). The smaller this value, the better.  
           </p>
         </div>
       </div>
